<resources>
    <string name="app_name">My Application</string>
    <string name="top_text">Проверка дней рождения</string>
    <string name="log_text">Выход</string>
    <string name="donate">Задонатить</string>
    <string name="share">Поделится с друзьями</string>
    <string name="about">О программе</string>
    <string name="title_activity_menu">menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="predictivec">Predictive<font color='#f5df4d'>Child</font></string>
    <string name="logintext">Узнайте пол будущего ребенка по датам рождения родителей. В расчетах используется метод, который был популярен у наших бабушек</string>
    <string name="askAuth">Авторизуйтесь для сохранения расчётов</string>
    <string name="noAuth">Продолжить без авторизации</string>
    <string name="termsAndConditions">Условия и положения</string>
    <string name="checkboxText">Я согласен с этим</string>
    <string name="btContinue">Продолжить</string>
    <string name="longTextOnAccept">Это приложение разработано для планирования пола будущего ребенка при зачатии естественным путём (не ЭКО). Проверка дня рождения ваших друзей и родственников выполняется бесплатно и позволяет оценить применимость методики. Перед тем, как планировать пол будущего ребенка, необходимо запустить проверку дней рождений для себя и партнёра. Если рассчитанные значения совпадут в обоих случаях, приложение порекомендует использование платной (прогнозной) части приложения. В случае, если значения не совпадут – приложение порекомендует отказаться от использования платной (прогнозной) части, это будет означать, что прогноз не будет точным</string>
    <string name="logout">Выход</string>
    <string name="other">Еще</string>
    <string name="forecasts_available">Доступно прогнозов</string>
    <string name="share_with_friends">Поделится с друзями</string>
    <string name="longTextAbout">Не следует, однако забывать, что реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития. Товарищи! начало повседневной работы по формированию позиции представляет собой интересный эксперимент проверки форм развития. Товарищи! новая модель организационной деятельности позволяет выполнять важные задания по разработке системы обучения кадров, соответствует насущным потребностям. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании новых предложений.</string>
    <string name="ConfPolicy">Политика конфиденциальности</string>
</resources>