<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcceptTerms">

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="94dp"
        android:text="@string/termsAndConditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/montserrat"
        android:textSize="16sp"
        android:textFontWeight="600"
        android:lineHeight="20sp"
        android:gravity="top|center"/>

    <ScrollView
        android:id="@+id/textScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="@id/terms"
        app:layout_constraintBottom_toTopOf="@id/accept"
        android:layout_marginBottom="76dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/longText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longTextOnAccept"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="400"
                android:textStyle="normal"
                android:textSize="16sp"
                android:lineHeight="25sp"
                android:gravity="center"/>

        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/accept"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkText"
        android:layout_marginStart="84dp"
        android:button="@drawable/checkbox_selector"
        />

    <TextView
        android:id="@+id/checkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/accept"
        android:text="@string/checkboxText"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        android:layout_marginBottom="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textStyle="normal"
        android:textFontWeight="600"
        android:lineHeight="22sp"
        />

    <Button
        android:id="@+id/accept"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="45dp"
        android:text="@string/btContinue"
        android:background="@drawable/ripple_button"
        android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>