<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu.Other">
    <ScrollView
        android:id="@+id/otherScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/otherHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="78dp"
        android:text="@string/other"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textFontWeight="600"
        android:textStyle="normal"
        android:textSize="17sp"
        android:lineHeight="20.72sp"
        android:textAlignment="center"
        android:textColor="#2D3556"/>

    <TextView
        android:id="@+id/forecastsAvailableHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/otherHeaderText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:text="@string/forecasts_available"
        android:fontFamily="@font/montserrat"
        android:textFontWeight="600"
        android:textStyle="normal"
        android:textSize="17sp"
        android:lineHeight="25sp"
        android:textColor="#6F6587"/>
    <View
        android:id="@+id/forecastsAvailableBackground"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:background="@drawable/top_background_rectangle"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/forecastsAvailableBody"
        android:layout_width="253dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/forecasts_available_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forecastsAvailableHeader" />

    <ImageView
        android:id="@+id/coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/coins"
        app:layout_constraintTop_toTopOf="@id/forecastsAvailableBody"
        app:layout_constraintStart_toStartOf="@id/forecastsAvailableBody"
        android:layout_marginTop="19dp"
        android:layout_marginStart="19dp"/>

    <TextView
        android:id="@+id/forecastsAvailableCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:textFontWeight="800"
        android:textStyle="normal"
        android:textSize="22sp"
        android:lineHeight="33sp"
        android:text="5"
        android:textColor="#B1A3D2"
        app:layout_constraintStart_toEndOf="@id/coins"
        app:layout_constraintTop_toTopOf="@id/forecastsAvailableBody"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_plus"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/forecastsAvailableBody"
        app:layout_constraintTop_toTopOf="@id/forecastsAvailableBody"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="7dp"/>

    <View
        android:id="@+id/otherActionsBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/forecastsAvailableBackground"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/other_actions_background"
        app:layout_constraintBottom_toBottomOf="@id/about"
        android:layout_marginBottom="-41dp"
        />

    <Button
        android:id="@+id/donate"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="41dp"
        app:layout_constraintEnd_toEndOf="@id/otherActionsBackground"
        app:layout_constraintStart_toStartOf="@id/otherActionsBackground"
        app:layout_constraintTop_toTopOf="@id/otherActionsBackground"
        android:backgroundTint="#FEF8EA"
        android:text="@string/donate"
        android:textColor="#2D3556"
        android:fontFamily="@font/montserrat"
        android:textFontWeight="600"
        android:textStyle="normal"
        android:textSize="16sp"
        android:lineHeight="22.24sp"/>

    <Button
        android:id="@+id/share"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/donate"
        app:layout_constraintEnd_toEndOf="@id/otherActionsBackground"
        app:layout_constraintStart_toStartOf="@id/otherActionsBackground"
        android:backgroundTint="#D2F4EC"
        android:text="@string/share_with_friends"
        android:textColor="#2D3556"
        android:fontFamily="@font/montserrat"
        android:textFontWeight="600"
        android:textStyle="normal"
        android:textSize="16sp"
        android:lineHeight="22.24sp"/>

    <Button
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/share"
        app:layout_constraintEnd_toEndOf="@id/otherActionsBackground"
        app:layout_constraintStart_toStartOf="@id/otherActionsBackground"
        android:backgroundTint="#E6F5FE"
        android:text="@string/about"
        android:textColor="#2D3556"
        android:fontFamily="@font/montserrat"
        android:textFontWeight="600"
        android:textStyle="normal"
        android:textSize="16sp"
        android:lineHeight="22.24sp"/>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/otherActionsBackground"
        android:layout_marginTop="17dp"
        android:backgroundTint="#B1A3D3"
        android:text="@string/logout"
        android:drawableLeft="@drawable/ic_logout"
        android:gravity="left|center"
        android:fontFamily="@font/montserrat"
        android:textFontWeight="600"
        android:textStyle="normal"
        android:textSize="14sp"
        android:lineHeight="17.07sp"
        />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>