<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login_background_circles">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/login_background_asset_2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="59dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="1dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_background_asset_1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/login_background_asset_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="303dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="1dp"/>

    <TextView
        android:id="@+id/predictivec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="57dp"
        android:fontFamily="@font/amiko"
        android:gravity="center_horizontal|top"
        android:lineHeight="47.26dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/predictivec"
        android:textColor="#2D3556"
        android:textFontWeight="600"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/authHint"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="46dp"
        android:fontFamily="@font/montserrat"
        android:lineHeight="25sp"
        android:text="@string/logintext"
        android:textAlignment="center"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/authHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/googleAuth"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="46dp"
        android:text="@string/askAuth"
        android:textAlignment="center" />


    <ImageButton
        android:id="@+id/facebookAuth"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/noAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/googleAuth"
        app:srcCompat="@drawable/ic_facebook"
        android:background="@drawable/facebook_background_style"
        />

    <Button
        android:id="@+id/noAuth"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="82dp"
        android:text="@string/noAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ripple_button_effect" />

    <ImageButton
        android:id="@+id/googleAuth"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintEnd_toStartOf="@id/facebookAuth"
        android:layout_marginEnd="13dp"
        app:layout_constraintBottom_toTopOf="@id/noAuth"
        android:layout_marginBottom="13dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="37dp"
        app:srcCompat="@drawable/ic_google"
        android:background="@drawable/ripple_button_effect"/>

</androidx.constraintlayout.widget.ConstraintLayout>